# sputnik

./: CMakeLists.txt  README.md
src/: Class_sputnik.hpp  Orbit.hpp  Sputnik.hpp
tests/: CMakeLists.txt  tests.cpp
